# crypto-event-study

./: .gitignore  README.md  pyproject.toml  run.ps1
core/: __init__.py  contracts.py  data.py  event_study.py  events.py  plots.py  stats.py
data_raw/: README.md  events_sample.csv
notebooks/: 01_event_study.py
reports/: event_study_report.html
tests/: test_event_study.py
